<?xml version="1.0" encoding="utf-8"?>
<!--
 Loco xml export: Android string resources
 Project: Glimmr
 Release: Working copy
 Locale: en_IE, English (Ireland)
 Exported by: Paul Bourke
 Exported at: Sat, 14 Dec 2013 15:56:32 +0000
-->
<resources>
    <string name="about">About</string>
    <string name="about_text">Thanks for using Glimmr!\n\nFollow Me: http://twitter.com/brk3\nContact: pauldbourke@gmail.com\n\nTranslators:\n*Lars Gellrich\n*Kuźniarski Jacek\n*Giuliano Ribeiro\n*Vidar Thorlaksson\n*Oliver Carreira\n*Dejan Mauer\n*António Cascalheira\n*Niels Radstaat\n*Niko Henriksson\n*Tim Bastiansen\n*Sébastien Croes\n*Giadrossi Filippo</string>
    <string name="activity">Activity</string>
    <string name="add">Add</string>
    <string name="add_description_hint">Tap to add a description</string>
    <string name="add_photos">Add photos</string>
    <string name="add_remove_sets_hint">Tap to add/remove sets</string>
    <string name="add_remove_tags_hint">Tap to add/remove tags (comma separated)</string>
    <string name="add_tags_tip">Tip: separate each tag with a comma</string>
    <string name="add_title_hint">Tap to add a title</string>
    <string name="add_to_sets">Add To Sets</string>
    <string name="added_a_comment">added a comment</string>
    <string name="aperture">APERTURE</string>
    <string name="app_name">Glimmr</string>
    <string name="basic_info">Basic Info</string>
    <string name="browse">browse</string>
    <string name="buy_pro_2">I\'m Paul, the creator of Glimmr.\n\nRight now this feature is reserved for pro users, as a means of me making a few bucks off my hobby.\n\nHelp support me in making the best Flickr app possible, and in return, you\'ll get:\n\n ★ Ability to upload photos through Glimmr\n ★ Higher quality thumbnails\n ★ Email support from myself\n \n Thank you.</string>
    <string name="by">by</string>
    <string name="cb_enable_activity_notifications_summary">Notify about activity on your photos</string>
    <string name="cb_enable_activity_notifications_title">Flickr Activity</string>
    <string name="cb_enable_contacts_notifications_summary">Notify when contacts upload new photos</string>
    <string name="cb_enable_contacts_notifications_title">Contacts Uploads</string>
    <string name="cb_enable_notifications_title">Enable Notifications</string>
    <string name="cb_high_quality_thumbnails_summary">Looks better, but may be slower</string>
    <string name="cb_high_quality_thumbnails_title">High Quality Thumbnails (Pro Only)</string>
    <string name="cb_show_usage_tips_summary">Show tips about how to use Glimmr</string>
    <string name="comment_sent">Comment Sent!</string>
    <string name="commented_on">commented on</string>
    <string name="contacts">Contacts</string>
    <string name="copy_url">Copy URL to Clipboard</string>
    <string name="couldnt_load_video">Couldn\'t load this video, try again later?</string>
    <string name="description">Description:</string>
    <string name="edit_text_hint">Add your comment…</string>
    <string name="exif_info">Exif Info</string>
    <string name="explore">Explore</string>
    <string name="favorited">favorited</string>
    <string name="favorites">Favorites</string>
    <string name="flickr_unavailable">Flickr is down right now, please try again later!</string>
    <string name="focal_length">Focal Length</string>
    <string name="four_hours">4 hours</string>
    <string name="group_info_fetch_error">Problem fetching group.  Please try again.</string>
    <string name="group_limit_reached">You\'ve reached the limit for this group.</string>
    <string name="groups">Groups</string>
    <string name="hi">Hi!</string>
    <string name="hmm">Hmm</string>
    <string name="ill_try_again_later">Glimmr will try again later</string>
    <string name="image_saved">Image saved to gallery!</string>
    <string name="interestingness">Interestingness</string>
    <string name="iso">ISO</string>
    <string name="just_a_moment">Just a moment…</string>
    <string name="location">Location</string>
    <string name="logged_in">Logged In!</string>
    <string name="login">Login</string>
    <string name="login_error">We\'re having trouble logging you in at the moment.\n\nPlease try again later, if you still can\'t login, drop me a mail at pauldbourke@gmail.com</string>
    <string name="login_later">You can login anytime from the menu!</string>
    <string name="login_problem">Could not log in</string>
    <string name="login_required">You need to login to do that!</string>
    <string name="login_to_flickr">LOGIN TO FLICKR</string>
    <string name="logout">Logout</string>
    <string name="menu_favorite">Mark as Favorite</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_view_comments">Comments</string>
    <string name="menu_view_exif">View Exif Info</string>
    <string name="more">More</string>
    <string name="most_recent">Most Recent</string>
    <string name="my_photos">My Photos</string>
    <string name="new_activity">New activity on your photo</string>
    <string name="no_connection">Something went wrong.\nTry refreshing?</string>
    <string name="no_exif_permission">The owner of the photo does not want to share EXIF data.</string>
    <string name="no_photos">No photos available.\nClick to retry.</string>
    <string name="no_search_results">No results found.</string>
    <string name="none">None</string>
    <string name="not_now">or, just browse some photos…</string>
    <string name="notification_contacts_content">from your contacts.</string>
    <string name="notification_contacts_ticker">Your Flickr contacts have posted new photos</string>
    <string name="notification_contacts_title">New photos</string>
    <string name="once_a_day">Once a day</string>
    <string name="one_hour">1 hour</string>
    <string name="people">People</string>
    <string name="photos">Photos</string>
    <string name="photos_uploaded">Photos Uploaded</string>
    <string name="photos_will_be_added">Your photos will be added shortly!</string>
    <string name="photoset">Photoset</string>
    <string name="play_store_description">\"*New!* Vote for new features at http://glimmr.uservoice.com
\n
\nA new, fast, modern and fun Flickr app for Android phones and tablets.
\n
\n\"\"Makes Browsing Flickr on Your Phone Fun Again\"\" - lifehacker.com
\n
\n* Swipe through you and your contacts photos with ease.
\n* Group support.
\n* Widget for Android 3.0 and up.
\n* Rich notifications for activity on your photos.
\n* Comment on photos and view detailed exif info.
\n* No Ads.
\n
\nIf you love Glimmr, please consider checking out Pro:
\n★ Upload functionality
\n★ Option to use high quality thumbnails (nice on tablets and large screens)
\n★ Support development for less than the price of a coffee :)
\n
\n** Translating Glimmr is easy! Email me if you would like it in your language.
\n
\nDisclaimer: Glimmr is in no way affiliated with Yahoo or Flickr.\"</string>
    <string name="please_wait">Please wait…</string>
    <string name="pool">Pool</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_category_photoviewer">Photo Viewer</string>
    <string name="pref_notification_intervals_title">Sync Interval</string>
    <string name="pro_donate">Pro/Donate</string>
    <string name="public_photos">Public</string>
    <string name="relevance">Relevance</string>
    <string name="remaining">remaining</string>
    <string name="retry">Retry</string>
    <string name="save_image">Save Image</string>
    <string name="search_hint">Search images and people</string>
    <string name="set_initial_tab">Set Initial Tab</string>
    <string name="set_location">Set Location</string>
    <string name="set_location_tip">Tip: Touch and hold map to set location</string>
    <string name="set_preferences">Set Preferences</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="sets">Sets</string>
    <string name="setting_wallpaper">Setting Wallpaper…</string>
    <string name="show_usage_tips">Show Usage Tips</string>
    <string name="shutter">SHUTTER</string>
    <string name="slideshow">Slideshow</string>
    <string name="slideshow_interval">Slideshow Interval (seconds)</string>
    <string name="sort_by">Sort by</string>
    <string name="storage_error">Problem accessing storage</string>
    <string name="tags">Tags:</string>
    <string name="tap_for_photostream">Tap to go to photostream</string>
    <string name="thirty_mins">30 minutes</string>
    <string name="timezone_message">Are your clock and timezone set correctly?</string>
    <string name="tip_add_to_group">Tip: Tap and hold a group to add photos</string>
    <string name="tip_add_to_set">Tip: Tap and hold a set to add photos</string>
    <string name="tip_glimmr_pro">Tip: Get Glimmr Pro for high quality thumbnails and wallpapers</string>
    <string name="tip_view_profile">Tip: Tap and hold an image to view author\'s profile</string>
    <string name="title">Title:</string>
    <string name="to">to</string>
    <string name="untitled">Untitled</string>
    <string name="upload">Upload</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="upload_photos_tip">Tip: tap and hold photos to select for upload</string>
    <string name="upload_problem">Problem uploading photos</string>
    <string name="upload_tip">Tip: Swipe photo left and right to add info</string>
    <string name="uploading_photos">Uploading %d photos to Flickr</string>
    <string name="view_profile">View Profile</string>
    <string name="views">Views</string>
    <string name="welcome">Welcome</string>
    <string name="you">You</string>
</resources>
